--- a/commands.conf
+++ b/commands.conf
@@ -5,19 +5,21 @@ object CheckCommand "check-snmp" {
       required = true
       value = "$csnmp_hostname$"
     }
-    "-w" = {
-      required = true
-      value = "$csnmp_warning$"
-    }
-    "-c" = {
-      required = true
-      value = "$csnmp_critical$"
-    }
     "-o" = {
       required = true
       value = "$csnmp_oid$"
     }
-    "-p" = "161"
-    "-C" = "public"
+    "-l" = "$csnmp_warning_regex$"
+    "-h" = "$csnmp_critical_regex$"
+    "-w" = "$csnmp_warning_min$"
+    "-m" = "$csnmp_warning_max$"
+    "-W" = "$csnmp_critical_min$"
+    "-M" = "$csnmp_critical_max$"
+    "-o" = {
+      required = true
+      value = "$csnmp_oid$"
+    }
+    "-p" = "$csnmp_port$"
+    "-C" = "$csnmp_community$"
   }
 }
