--- a/commands.conf
+++ b/commands.conf
@@ -3,7 +3,7 @@ object CheckCommand "check-snmp" {
   arguments += {
     "-H" = {
       required = true
-      value = "$csnmp_hostname$"
+      value = "$csnmp_host$"
     }
     "-o" = {
       required = true
