--- a/commands.conf
+++ b/commands.conf
@@ -9,17 +9,11 @@ object CheckCommand "check-snmp" {
       required = true
       value = "$csnmp_oid$"
     }
-    "-l" = "$csnmp_warning_regex$"
-    "-h" = "$csnmp_critical_regex$"
-    "-w" = "$csnmp_warning_min$"
-    "-m" = "$csnmp_warning_max$"
-    "-W" = "$csnmp_critical_min$"
-    "-M" = "$csnmp_critical_max$"
-    "-o" = {
-      required = true
-      value = "$csnmp_oid$"
-    }
+    "-W" = "$csnmp_warning_regex$"
+    "-C" = "$csnmp_critical_regex$"
+    "-w" = "$csnmp_warning$"
+    "-c" = "$csnmp_critical$"
     "-p" = "$csnmp_port$"
-    "-C" = "$csnmp_community$"
+    "-N" = "$csnmp_community$"
   }
 }
